--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,7 +10,7 @@
       <ul>
         <li><a class="nav-link scrollto" href="/about-us">About Us</a></li>
         <li class="dropdown triangle">
-          <a href="#"
+          <a href="/community"
             ><span>Community</span> <i class="bi bi-chevron-down"></i
           ></a>
           <ul>
@@ -20,22 +20,46 @@
               </div>
               <div class="row">
                 <div class="col-md-4">
-                  <li><a href="#">IP & Brand Protection</a></li>
-                  <li><a href="#">Transportation</a></li>
-                  <li><a href="#">Trust & Safety</a></li>
-                  <li><a href="#">Cyber Crime</a></li>
+                  <li>
+                    <a href="/community#ipandbrandprotection"
+                      >IP & Brand Protection</a
+                    >
+                  </li>
+                  <li>
+                    <a href="/community#transportation">Transportation</a>
+                  </li>
+                  <li>
+                    <a href="/community#trustandsafety">Trust & Safety</a>
+                  </li>
+                  <li>
+                    <a href="/community#cybercrime">Cyber Crime</a>
+                  </li>
                 </div>
                 <div class="col-md-4">
-                  <li><a href="#">Child Exploitation</a></li>
-                  <li><a href="#">Insurance Fraud</a></li>
-                  <li><a href="#">Finance fraud</a></li>
-                  <li><a href="#">Compliance</a></li>
+                  <li>
+                    <a href="/community#childexloitation">Child Exploitation</a>
+                  </li>
+                  <li>
+                    <a href="/community#insurancefraud">Insurance Fraud</a>
+                  </li>
+                  <li><a href="/community#financefraud">Finance fraud</a></li>
+                  <li><a href="/community#compliance">Compliance</a></li>
                 </div>
                 <div class="col-md-4">
-                  <li><a href="#">Human Trafficing</a></li>
-                  <li><a href="#">Violent Extremism</a></li>
-                  <li><a href="#">Online Investigation</a></li>
-                  <li><a href="#">Organized Crime</a></li>
+                  <li>
+                    <a href="/community#huamentrafficing">Human Trafficing</a>
+                  </li>
+                  <li>
+                    <a href="/community#violentextremism">Violent Extremism</a>
+                  </li>
+                  <li>
+                    <a href="/community#onlineinvestigation"
+                      >Online Investigation</a
+                    >
+                  </li>
+                  <li>
+                    <a href="/community#organizedcrime">Organized Crime</a>
+                  </li>
                 </div>
               </div>
             </div>
